--- a/scripts/Abundance O.ipynb
+++ b/scripts/Abundance O.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,29 +105,39 @@
     "    settings = Settings()\n",
     "    props = {\"Simulation\": simulations}\n",
     "\n",
-    "    data = np.zeros((len(simulations), 10))\n",
+    "    data = np.zeros((len(simulations), 12))\n",
     "    for i, simulation in enumerate(simulations):\n",
     "        df = read_data(simulation)\n",
-    "        data[i, -2] = np.nanmedian(df[\"[O/Fe]\"])\n",
-    "        data[i, -1] = np.nanmedian(df[\"[Fe/H]\"])\n",
+    "        data[i, -4] = np.nanmedian(df[\"[O/Fe]\"])\n",
+    "        data[i, -3] = np.nanmedian(df[\"[Fe/H]\"])\n",
     "        for j in range(len(settings.components)):\n",
     "            data[i, j] = np.nanmedian(\n",
     "                df[\"[O/Fe]\"][df[\"ComponentTag\"] == j])\n",
     "            data[i, j + 4] = np.nanmedian(\n",
     "                df[\"[Fe/H]\"][df[\"ComponentTag\"] == j])\n",
-    "    \n",
+    "        data[i, -2] = np.nanmedian(\n",
+    "            df[\"[O/Fe]\"][\n",
+    "                (df[\"ComponentTag\"] == 2) | (df[\"ComponentTag\"] == 3)])\n",
+    "        data[i, -1] = np.nanmedian(\n",
+    "            df[\"[Fe/H]\"][\n",
+    "                (df[\"ComponentTag\"] == 2) | (df[\"ComponentTag\"] == 3)])\n",
+    "        data[i, -4] = np.nanmedian(df[\"[O/Fe]\"])\n",
+    "        data[i, -3] = np.nanmedian(df[\"[Fe/H]\"])\n",
+    "\n",
     "    for j in range(len(settings.components)):\n",
     "        props[f\"[O/Fe]_{settings.components[j]}\"] = data[:, j]\n",
     "        props[f\"[Fe/H]_{settings.components[j]}\"] = data[:, j + 4]\n",
-    "    props[\"[O/Fe]_All\"] = data[:, -2]\n",
-    "    props[\"[Fe/H]_All\"] = data[:, -1]\n",
+    "    props[\"[O/Fe]_All\"] = data[:, -4]\n",
+    "    props[\"[Fe/H]_All\"] = data[:, -3]\n",
+    "    props[\"[O/Fe]_D\"] = data[:, -2]\n",
+    "    props[\"[Fe/H]_D\"] = data[:, -1]\n",
     "    \n",
     "    return pd.DataFrame(props)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,12 +169,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "fig, axs = plt.subplots(\n",
-    "    figsize=(8.0, 2.0), nrows=1, ncols=5, sharey=True, sharex=True,\n",
+    "    figsize=(7.0, 2.0), nrows=1, ncols=4, sharey=True, sharex=True,\n",
     "    gridspec_kw={\"hspace\": 0.0, \"wspace\": 0.0})\n",
     "\n",
     "for ax in axs.flatten():\n",
@@ -182,7 +192,7 @@
     "axs[0].scatter(\n",
     "    stats[\"[Fe/H]_All\"], stats[\"[O/Fe]_All\"],\n",
     "    c='k', zorder=10, s=20, linewidths=0.4, edgecolors=\"white\", marker='o')\n",
-    "for c in settings.components:\n",
+    "for c in [\"H\", \"B\"]:\n",
     "    axs[0].scatter(\n",
     "        stats[f\"[Fe/H]_{c}\"], stats[f\"[O/Fe]_{c}\"],\n",
     "        c=\"silver\", zorder=5,\n",
@@ -199,15 +209,16 @@
     "# axs[0].fill_betweenx(\n",
     "#     y=pdf_y, x1=-pdf_x + 0.8, x2=0.8, edgecolor=\"black\", facecolor=\"#00000030\")\n",
     "\n",
-    "for i in range(4):\n",
+    "for i in range(3):\n",
     "    ax = axs.flatten()[i + 1]\n",
     "    ax.scatter(\n",
     "        stats[\"[Fe/H]_All\"], stats[\"[O/Fe]_All\"],\n",
     "        c=\"silver\", zorder=5, s=20, linewidths=0.4,\n",
     "        edgecolors=\"white\", marker='o')\n",
-    "    for j in range(len(settings.components)):\n",
+    "    for j in range(len([\"H\", \"B\"])):\n",
     "        label = labels[j] if j == i else None\n",
-    "        color = \"black\" if j == i else \"silver\"\n",
+    "        color = settings.component_colors[settings.components[j]] \\\n",
+    "            if j == i else \"silver\"\n",
     "        zorder = 10 if j == i else 5\n",
     "        ax.scatter(\n",
     "            stats[f\"[Fe/H]_{settings.components[j]}\"],\n",
@@ -238,11 +249,22 @@
     "axs[0].text(\n",
     "    x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\", s=r\"$\\textbf{All}$\",\n",
     "    c=\"black\", transform=axs[0].transAxes)\n",
-    "for i, c in enumerate(settings.components):\n",
+    "for i, c in enumerate([\"H\", \"B\"]):\n",
     "    axs[i + 1].text(\n",
     "        x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
     "        s=r\"$\\textbf{\" + settings.component_labels[c] + \"}$\",\n",
-    "        c=\"black\", transform=axs[i + 1].transAxes)\n",
+    "        c=settings.component_colors[c], transform=axs[i + 1].transAxes)\n",
+    "\n",
+    "axs[3].text(\n",
+    "    x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\", s=r\"$\\textbf{Disc}$\",\n",
+    "    c=\"tab:purple\", transform=axs[3].transAxes)\n",
+    "axs[3].scatter(\n",
+    "    stats[f\"[Fe/H]_D\"], stats[f\"[O/Fe]_D\"], c=\"tab:purple\", zorder=10,\n",
+    "    s=20, linewidths=0.4, edgecolors=\"white\", marker=\"^\")\n",
+    "for ax in axs[:3]:\n",
+    "    ax.scatter(\n",
+    "    stats[f\"[Fe/H]_D\"], stats[f\"[O/Fe]_D\"], c=\"silver\", zorder=5,\n",
+    "    s=20, linewidths=0.4, edgecolors=\"white\", marker=\"^\")\n",
     "\n",
     "fig.savefig(f\"../images/metallicity/OFe_vs_FeH_included_s127{SUFFIX}.pdf\")\n",
     "plt.close(fig)"
