--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,17 +310,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SIMULATION = \"au6_or_l4_s127\"\n",
+    "SIMULATION = \"au9_or_l4_s127\"\n",
     "galaxy, _, _, _ = parse(SIMULATION)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,12 +342,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(8.0, 2.0))\n",
-    "gs = fig.add_gridspec(nrows=1, ncols=5, hspace=0.0, wspace=0.0)\n",
+    "fig = plt.figure(figsize=(7.0, 2.0))\n",
+    "gs = fig.add_gridspec(nrows=1, ncols=4, hspace=0.0, wspace=0.0)\n",
     "axs = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
     "for ax in axs.flat:\n",
@@ -363,7 +363,7 @@
     "    ax.label_outer()\n",
     "\n",
     "axs[0].hist2d(df[\"StellarAge_Gyr\"], df[\"[Fe/H]\"],\n",
-    "              cmap='gnuplot2',\n",
+    "              cmap='nipy_spectral',\n",
     "              bins=config[\"AGE_METALLICITY_RELATION\"][\"N_BINS_MAP\"],\n",
     "              range=[axs[0].get_xlim(), axs[0].get_ylim()],\n",
     "              norm=mcolors.LogNorm(\n",
@@ -372,7 +372,7 @@
     "              rasterized=True)[-1]\n",
     "axs[0].plot(axs[0].get_xlim(), [medians[0][1]] * 2, ls=\":\", c='k')\n",
     "axs[0].plot([medians[0][0]] * 2, axs[0].get_ylim(), ls=\":\", c='k')\n",
-    "axs[0].scatter(*medians[0], c=\"k\", s=20, lw=1, marker=\"o\", ec='k',\n",
+    "axs[0].scatter(*medians[0], c=\"white\", s=20, lw=1, marker=\"o\", ec='k',\n",
     "               zorder=15)\n",
     "axs[0].text(x=0.05, y=0.05, size=8.0, ha=\"left\", va=\"bottom\",\n",
     "            s=r\"$\\textbf{All}$\", c='k', transform=axs[0].transAxes)\n",
@@ -394,7 +394,8 @@
     "#     size=8.0, transform=axs[0].transAxes, ha=\"left\", va=\"top\",\n",
     "#     )\n",
     "\n",
-    "for i in range(len(settings.components)):\n",
+    "for c in [\"H\", \"B\"]:\n",
+    "    i = settings.component_tags[c]\n",
     "    is_region = (df[\"ComponentTag\"] == i)\n",
     "    ax = axs[i + 1]\n",
     "    color = list(settings.component_colors.values())[i]\n",
@@ -402,7 +403,7 @@
     "\n",
     "    im = ax.hist2d(\n",
     "        df[\"StellarAge_Gyr\"][is_region], df[\"[Fe/H]\"][is_region],\n",
-    "        cmap='gnuplot2',\n",
+    "        cmap='nipy_spectral',\n",
     "        bins=config[\"AGE_METALLICITY_RELATION\"][\"N_BINS_MAP\"],\n",
     "        range=[ax.get_xlim(), ax.get_ylim()],\n",
     "        norm=mcolors.LogNorm(\n",
@@ -418,8 +419,32 @@
     "\n",
     "    ax.plot(ax.get_xlim(), [medians[i + 1][1]] * 2, ls=\":\", c=\"black\")\n",
     "    ax.plot([medians[i + 1][0]] * 2, ax.get_ylim(), ls=\":\", c=\"black\")\n",
-    "    ax.scatter(*medians[i + 1], c=\"black\", s=20, lw=1, edgecolors='k',\n",
+    "    ax.scatter(*medians[i + 1], c=\"white\", s=20, lw=1, edgecolors='k',\n",
     "               zorder=15, marker=marker)\n",
+    "\n",
+    "is_region = (df[\"ComponentTag\"] == 2) | (df[\"ComponentTag\"] == 3)\n",
+    "ax = axs[3]\n",
+    "im = ax.hist2d(\n",
+    "    df[\"StellarAge_Gyr\"][is_region], df[\"[Fe/H]\"][is_region],\n",
+    "    cmap='nipy_spectral',\n",
+    "    bins=config[\"AGE_METALLICITY_RELATION\"][\"N_BINS_MAP\"],\n",
+    "    range=[ax.get_xlim(), ax.get_ylim()],\n",
+    "    norm=mcolors.LogNorm(\n",
+    "        vmin=config[\"AGE_METALLICITY_RELATION\"][\"MAP_VMIN\"],\n",
+    "        vmax=config[\"AGE_METALLICITY_RELATION\"][\"MAP_VMAX\"]),\n",
+    "    rasterized=True)[-1]\n",
+    "\n",
+    "ax.text(\n",
+    "    x=0.05, y=0.05, size=8.0, ha=\"left\", va=\"bottom\",\n",
+    "    s=r\"$\\textbf{\" + \"Disc\" + \"}$\",\n",
+    "    c=\"black\", transform=ax.transAxes)\n",
+    "\n",
+    "x_median = df[\"StellarAge_Gyr\"][is_region].median()\n",
+    "y_median = df[\"[Fe/H]\"][is_region].median()\n",
+    "ax.plot(ax.get_xlim(), [y_median] * 2, ls=\":\", c=\"black\")\n",
+    "ax.plot([x_median] * 2, ax.get_ylim(), ls=\":\", c=\"black\")\n",
+    "ax.scatter(x_median, y_median, c=\"white\", s=20, lw=1, edgecolors='k',\n",
+    "           zorder=15, marker=\"^\")\n",
     "\n",
     "    # # Median for this galaxy\n",
     "    # stat, bin_edges, _ = binned_statistic(\n",
@@ -480,9 +505,15 @@
     "        components.append(i)\n",
     "        median_abundances.append(np.nanmedian(df[\"[Fe/H]\"][is_region]))\n",
     "        median_ages.append(np.nanmedian(df[\"StellarAge_Gyr\"][is_region]))\n",
+    "\n",
     "    components.append(-1)\n",
     "    median_abundances.append(np.nanmedian(df[\"[Fe/H]\"]))\n",
     "    median_ages.append(np.nanmedian(df[\"StellarAge_Gyr\"]))\n",
+    "\n",
+    "    components.append(4)  # Disc\n",
+    "    is_disc = is_region = (df[\"ComponentTag\"] == 2) | (df[\"ComponentTag\"] == 3)\n",
+    "    median_abundances.append(np.nanmedian(df[\"[Fe/H]\"][is_region]))\n",
+    "    median_ages.append(np.nanmedian(df[\"StellarAge_Gyr\"][is_region]))\n",
     "\n",
     "components = np.array(components)\n",
     "median_abundances = np.array(median_abundances)\n",
@@ -491,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,6 +536,9 @@
     "    data[f\"MedianAges_Gyr_{c}\"] = median_ages[components == tag]\n",
     "    data[f\"MedianAbundance_FeH_{c}\"] = median_abundances[components == tag]\n",
     "\n",
+    "data[f\"MedianAges_Gyr_D\"] = median_ages[components == 4]\n",
+    "data[f\"MedianAbundance_FeH_D\"] = median_abundances[components == 4]\n",
+    "\n",
     "df = pd.DataFrame(data)\n",
     "df.to_csv(f\"../results/age_metallicity_medians{config['FILE_SUFFIX']}.csv\",\n",
     "          index=False)"
@@ -512,7 +546,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\n",
+    "    f\"../results/age_metallicity_medians{config['FILE_SUFFIX']}.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +565,7 @@
     "labels = list(settings.component_labels.values())\n",
     "\n",
     "fig, axs = plt.subplots(\n",
-    "    figsize=(8.0, 2.0), nrows=1, ncols=5, sharey=True, sharex=True,\n",
+    "    figsize=(7.0, 2.0), nrows=1, ncols=4, sharey=True, sharex=True,\n",
     "    gridspec_kw={\"hspace\": 0.0, \"wspace\": 0.0})\n",
     "\n",
     "for ax in axs.flat:\n",
@@ -542,12 +586,17 @@
     "axs[0].scatter(\n",
     "    df[\"MedianAges_Gyr_All\"], df[\"MedianAbundance_FeH_All\"],\n",
     "    c='k', zorder=10, s=20, linewidths=0.4, edgecolors=\"white\", marker='o')\n",
-    "for c in settings.components:\n",
+    "for c in [\"H\", \"B\"]:\n",
     "    axs[0].scatter(\n",
     "        df[f\"MedianAges_Gyr_{c}\"], df[f\"MedianAbundance_FeH_{c}\"],\n",
     "        c=\"silver\", zorder=5,\n",
     "        s=20, linewidths=0.4, edgecolors=\"white\",\n",
     "        marker=settings.component_markers[c])\n",
+    "axs[0].scatter(\n",
+    "    df[f\"MedianAges_Gyr_D\"], df[f\"MedianAbundance_FeH_D\"],\n",
+    "    c=\"silver\", zorder=5,\n",
+    "    s=20, linewidths=0.4, edgecolors=\"white\",\n",
+    "    marker=\"^\")\n",
     "# age_pdf = gaussian_kde(df[\"MedianAges_Gyr_All\"])\n",
     "# pdf_x = np.linspace(0, 14, 100)\n",
     "# pdf_y = age_pdf(pdf_x) / np.max(age_pdf(pdf_x)) * 0.2 - 1.0\n",
@@ -560,17 +609,23 @@
     "#     y=pdf_y, x1=-pdf_x + 14, x2=14, edgecolor=\"black\", facecolor=\"#00000030\")\n",
     "# endregion\n",
     "\n",
-    "for i in range(len(settings.components)):\n",
+    "for i in range(len([\"H\", \"B\"])):\n",
     "    ax = axs.flatten()[i + 1]\n",
-    "    for j, c in enumerate(settings.components):\n",
+    "    for j, c in enumerate([\"H\", \"B\"]):\n",
     "        label = labels[j] if j == i else None\n",
-    "        color = \"black\" if j == i else \"silver\"\n",
+    "        color = settings.component_colors[settings.components[j]] \\\n",
+    "            if j == i else \"silver\"\n",
     "        zorder = 10 if j == i else 5\n",
     "        ax.scatter(\n",
     "            df[f\"MedianAges_Gyr_{c}\"],\n",
     "            df[f\"MedianAbundance_FeH_{c}\"],\n",
     "            c=color, label=label, zorder=zorder,\n",
     "            s=20, linewidths=0.4, edgecolors=\"white\", marker=markers[j])\n",
+    "    ax.scatter(\n",
+    "        df[f\"MedianAges_Gyr_D\"],\n",
+    "        df[f\"MedianAbundance_FeH_D\"],\n",
+    "        c=\"silver\", label=label, zorder=5,\n",
+    "        s=20, linewidths=0.4, edgecolors=\"white\", marker=\"^\")\n",
     "\n",
     "        # if j == i:\n",
     "        #     age_pdf = gaussian_kde(df[f\"MedianAges_Gyr_{c}\"])\n",
@@ -590,11 +645,25 @@
     "axs[0].text(\n",
     "    x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\", s=r\"$\\textbf{All}$\",\n",
     "    c=\"black\", transform=axs[0].transAxes)\n",
-    "for i, c in enumerate(settings.components):\n",
+    "for i, c in enumerate([\"H\", \"B\"]):\n",
     "    axs[i + 1].text(\n",
     "        x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
     "        s=r\"$\\textbf{\" + settings.component_labels[c] + \"}$\",\n",
-    "        c=\"black\", transform=axs[i + 1].transAxes)\n",
+    "        c=settings.component_colors[c], transform=axs[i + 1].transAxes)\n",
+    "\n",
+    "axs[3].text(\n",
+    "    x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\", s=r\"$\\textbf{Disc}$\",\n",
+    "    c=\"tab:purple\", transform=axs[3].transAxes)\n",
+    "axs[3].scatter(\n",
+    "    df[\"MedianAges_Gyr_D\"], df[\"MedianAbundance_FeH_D\"],\n",
+    "    c=\"tab:purple\", zorder=10, s=20, linewidths=0.4, edgecolors=\"white\",\n",
+    "    marker='^')\n",
+    "for c in [\"H\", \"B\"]:\n",
+    "    axs[3].scatter(\n",
+    "        df[f\"MedianAges_Gyr_{c}\"], df[f\"MedianAbundance_FeH_{c}\"],\n",
+    "        c=\"silver\", zorder=5,\n",
+    "        s=20, linewidths=0.4, edgecolors=\"white\",\n",
+    "        marker=settings.component_markers[c])\n",
     "\n",
     "fig.savefig(\n",
     "    f\"../images/age_metallicity_by_region/\"\n",
