--- a/scripts/Galaxy Decomposition.ipynb
+++ b/scripts/Galaxy Decomposition.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
     "\n",
     "    _, _, _, _ = ax.hist2d(\n",
     "        circularity, potential,\n",
-    "        cmap='viridis', bins=200,\n",
+    "        cmap='nipy_spectral', bins=200,\n",
     "        range=[ax.get_xlim(), ax.get_ylim()],\n",
     "        norm=mcolors.LogNorm(vmin=1E0, vmax=1E3), rasterized=True)\n",
     "    ax.text(x=0.05, y=0.95, s=r\"$\\texttt{\" + label + \"}$\",\n",
@@ -142,14 +142,14 @@
     "\n",
     "    # Draw lines for the components\n",
     "    ax.plot([DISC_MIN_CIRC] * 2, ax.get_ylim(),\n",
-    "            ls=\"-\", c='k', lw=.5)\n",
-    "    ax.plot([DISC_STD_CIRC - COLD_DISC_DELTA_CIRC] * 2, ax.get_ylim(),\n",
-    "            ls=\"-\", c='k', lw=.5)\n",
-    "    ax.plot([DISC_STD_CIRC + COLD_DISC_DELTA_CIRC] * 2, ax.get_ylim(),\n",
-    "            ls=\"-\", c='k', lw=.5)\n",
+    "            ls=\"-\", c='k', lw=.75)\n",
+    "    # ax.plot([DISC_STD_CIRC - COLD_DISC_DELTA_CIRC] * 2, ax.get_ylim(),\n",
+    "    #         ls=\"--\", c='k', lw=.75)\n",
+    "    # ax.plot([DISC_STD_CIRC + COLD_DISC_DELTA_CIRC] * 2, ax.get_ylim(),\n",
+    "    #         ls=\"--\", c='k', lw=.75)\n",
     "    ax.plot([ax.get_xlim()[0], DISC_MIN_CIRC], [BULGE_MAX_SPECIFIC_ENERGY] * 2,\n",
-    "            ls=\"-\", c='k', lw=.5)\n",
-    "\n",
+    "            ls=\"-\", c='k', lw=.75)\n",
+    "    \n",
     "    fig.savefig(\n",
     "        f\"../images/galaxy_decomposition/phase_space_{simulation}{SUFFIX}.pdf\")\n",
     "    plt.close(fig)"
@@ -157,11 +157,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_phase_space_for_galaxy(\"au6_or_l4_s127\")"
+    "plot_phase_space_for_galaxy(\"au9_or_l4_s127\")"
    ]
   },
   {
