Add AMR using oxygen abundance.

--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -90,6 +90,7 @@
     "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.add_stellar_age()\n",
     "    s.add_metal_abundance(of=\"Fe\", to='H')\n",
+    "    s.add_metal_abundance(of=\"O\", to='Fe')\n",
     "    s.tag_particles_by_region(\n",
     "        disc_std_circ=config[\"DISC_STD_CIRC\"],\n",
     "        disc_min_circ=config[\"DISC_MIN_CIRC\"],\n",
@@ -102,6 +103,7 @@
     "    props = {\n",
     "        \"StellarAge_Gyr\": s.stellar_age[is_real_star & is_main_obj],\n",
     "        \"[Fe/H]\": s.metal_abundance[\"Fe/H\"][is_real_star & is_main_obj],\n",
+    "        \"[O/Fe]\": s.metal_abundance[\"O/Fe\"][is_real_star & is_main_obj],\n",
     "        \"ComponentTag\": s.region_tag[is_real_star & is_main_obj],\n",
     "        }\n",
     "    \n",
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +144,7 @@
     "    component_tags = list()\n",
     "\n",
     "    for simulation in simulations:\n",
-    "        df = read_data(simulation, include_region=True)\n",
+    "        df = read_data(simulation)\n",
     "\n",
     "        ages += list(df[\"StellarAge_Gyr\"].to_numpy())\n",
     "        abundances += list(df[\"[Fe/H]\"].to_numpy())\n",
@@ -465,12 +467,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "components = []\n",
     "median_abundances = []\n",
+    "o_median_abundances = []\n",
     "median_ages = []\n",
     "\n",
     "for simulation in [f\"au{i}_or_l4_s127\" for i in SAMPLE]:\n",
@@ -479,19 +482,22 @@
     "        is_region = (df[\"ComponentTag\"] == i)\n",
     "        components.append(i)\n",
     "        median_abundances.append(np.nanmedian(df[\"[Fe/H]\"][is_region]))\n",
+    "        o_median_abundances.append(np.nanmedian(df[\"[O/Fe]\"][is_region]))\n",
     "        median_ages.append(np.nanmedian(df[\"StellarAge_Gyr\"][is_region]))\n",
     "    components.append(-1)\n",
     "    median_abundances.append(np.nanmedian(df[\"[Fe/H]\"]))\n",
+    "    o_median_abundances.append(np.nanmedian(df[\"[O/Fe]\"]))\n",
     "    median_ages.append(np.nanmedian(df[\"StellarAge_Gyr\"]))\n",
     "\n",
     "components = np.array(components)\n",
     "median_abundances = np.array(median_abundances)\n",
+    "o_median_abundances = np.array(o_median_abundances)\n",
     "median_ages = np.array(median_ages)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,10 +506,12 @@
     "data[\"Simulation\"] = [f\"au{i}_or_l4_s127\" for i in SAMPLE]\n",
     "data[\"MedianAges_Gyr_All\"] = median_ages[components == -1]\n",
     "data[\"MedianAbundance_FeH_All\"] = median_abundances[components == -1]\n",
+    "data[\"MedianAbundance_OFe_All\"] = o_median_abundances[components == -1]\n",
     "for c in settings.components:\n",
     "    tag = settings.component_tags[c]\n",
     "    data[f\"MedianAges_Gyr_{c}\"] = median_ages[components == tag]\n",
     "    data[f\"MedianAbundance_FeH_{c}\"] = median_abundances[components == tag]\n",
+    "    data[f\"MedianAbundance_OFe_{c}\"] = o_median_abundances[components == tag]\n",
     "\n",
     "df = pd.DataFrame(data)\n",
     "df.to_csv(f\"../results/age_metallicity_medians{config['FILE_SUFFIX']}.csv\",\n",
@@ -599,6 +607,99 @@
     "fig.savefig(\n",
     "    f\"../images/age_metallicity_by_region/\"\n",
     "    f\"included_scatter{config['FILE_SUFFIX']}.pdf\")\n",
+    "plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "markers = list(settings.component_markers.values())\n",
+    "colors = list(settings.component_colors.values())\n",
+    "labels = list(settings.component_labels.values())\n",
+    "\n",
+    "fig, axs = plt.subplots(\n",
+    "    figsize=(8.0, 2.0), nrows=1, ncols=5, sharey=True, sharex=True,\n",
+    "    gridspec_kw={\"hspace\": 0.0, \"wspace\": 0.0})\n",
+    "\n",
+    "for ax in axs.flat:\n",
+    "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "\n",
+    "    ax.set_xlim(0, 14)\n",
+    "    ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
+    "    ax.set_xlabel(\"Stellar Age [Gyr]\")\n",
+    "\n",
+    "    ax.set_ylim(0.18, 0.32)\n",
+    "    ax.set_yticks([0.2, 0.22, 0.24, 0.26, 0.28, 0.30])\n",
+    "    ax.set_ylabel('[O/Fe]')\n",
+    "    ax.set_axisbelow(True)\n",
+    "\n",
+    "    ax.label_outer()\n",
+    "\n",
+    "# region All Stars\n",
+    "axs[0].scatter(\n",
+    "    df[\"MedianAges_Gyr_All\"], df[\"MedianAbundance_OFe_All\"],\n",
+    "    c='k', zorder=10, s=20, linewidths=0.4, edgecolors=\"white\", marker='o')\n",
+    "for c in settings.components:\n",
+    "    axs[0].scatter(\n",
+    "        df[f\"MedianAges_Gyr_{c}\"], df[f\"MedianAbundance_OFe_{c}\"],\n",
+    "        c=\"silver\", zorder=5,\n",
+    "        s=20, linewidths=0.4, edgecolors=\"white\",\n",
+    "        marker=settings.component_markers[c])\n",
+    "age_pdf = gaussian_kde(df[\"MedianAges_Gyr_All\"])\n",
+    "pdf_x = np.linspace(0, 14, 100)\n",
+    "pdf_y = age_pdf(pdf_x) / np.max(age_pdf(pdf_x)) * 0.02 + 0.18\n",
+    "axs[0].fill_between(\n",
+    "    x=pdf_x, y1=0.18, y2=pdf_y, edgecolor=\"black\", facecolor=\"#00000030\")\n",
+    "abundance_pdf = gaussian_kde(df[\"MedianAbundance_OFe_All\"])\n",
+    "pdf_y = np.linspace(-1.0, 0.7, 100)\n",
+    "pdf_x = abundance_pdf(pdf_y) / np.max(abundance_pdf(pdf_y)) * 2\n",
+    "axs[0].fill_betweenx(\n",
+    "    y=pdf_y, x1=-pdf_x + 14, x2=14, edgecolor=\"black\", facecolor=\"#00000030\")\n",
+    "# endregion\n",
+    "\n",
+    "for i in range(len(settings.components)):\n",
+    "    ax = axs.flatten()[i + 1]\n",
+    "    for j, c in enumerate(settings.components):\n",
+    "        label = labels[j] if j == i else None\n",
+    "        color = colors[j] if j == i else \"silver\"\n",
+    "        zorder = 10 if j == i else 5\n",
+    "        ax.scatter(\n",
+    "            df[f\"MedianAges_Gyr_{c}\"],\n",
+    "            df[f\"MedianAbundance_OFe_{c}\"],\n",
+    "            c=color, label=label, zorder=zorder,\n",
+    "            s=20, linewidths=0.4, edgecolors=\"white\", marker=markers[j])\n",
+    "\n",
+    "        if j == i:\n",
+    "            age_pdf = gaussian_kde(df[f\"MedianAges_Gyr_{c}\"])\n",
+    "            pdf_x = np.linspace(0, 14, 100)\n",
+    "            pdf_y = age_pdf(pdf_x) / np.max(age_pdf(pdf_x)) * 0.02 + 0.18\n",
+    "            ax.fill_between(\n",
+    "                x=pdf_x, y1=0.18, y2=pdf_y, edgecolor=color,\n",
+    "                facecolor=color + \"30\")\n",
+    "            \n",
+    "            abundance_pdf = gaussian_kde(df[f\"MedianAbundance_OFe_{c}\"])\n",
+    "            pdf_y = np.linspace(-1.0, 0.7, 100)\n",
+    "            pdf_x = abundance_pdf(pdf_y) / np.max(abundance_pdf(pdf_y)) * 2\n",
+    "            ax.fill_betweenx(\n",
+    "                y=pdf_y, x1=-pdf_x + 14, x2=14, edgecolor=color,\n",
+    "                facecolor=color + \"30\")\n",
+    "\n",
+    "axs[0].text(\n",
+    "    x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\", s=r\"$\\textbf{All}$\",\n",
+    "    c=\"black\", transform=axs[0].transAxes)\n",
+    "for i, c in enumerate(settings.components):\n",
+    "    axs[i + 1].text(\n",
+    "        x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
+    "        s=r\"$\\textbf{\" + settings.component_labels[c] + \"}$\",\n",
+    "        c=settings.component_colors[c], transform=axs[i + 1].transAxes)\n",
+    "\n",
+    "fig.savefig(\n",
+    "    f\"../images/age_metallicity_by_region/\"\n",
+    "    f\"included_OFe_scatter{config['FILE_SUFFIX']}.pdf\")\n",
     "plt.close(fig)"
    ]
   },
